# Trabalho-de-Eng.-Dados

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
delta/: index.html
docs/: delta.md  iceberg.md  index.md  pyspark.md
iceberg/: index.html
notebooks/: deltalake.ipynb  iceberg.ipynb
pyspark/: index.html
search/: search_index.json
site/delta/: index.html
site/iceberg/: index.html
site/pyspark/: index.html
site/search/: search_index.json
